--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "compression-webpack-plugin": "1.1.12",
         "core-js": "^3.6.5",
         "node-sass": "4.14.1",
+        "nprogress": "^0.2.0",
         "progressive-image": "^1.2.0",
         "sass-loader": "^8.0.0",
         "vue": "^2.6.11",
